# jni-template

./: .gitignore  README.md  SETUP.md  USAGE.md  build.gradle  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle  settings.gradle.kts
annotations/: build.gradle.kts
build-logic/: build.gradle.kts
examples/buffer/: build.gradle.kts
examples/buffer/native/cpp/: CMakeLists.txt
examples/buffer/native/cpp/src/: cabi.cpp
examples/buffer/native/rust/: Cargo.toml
examples/buffer/native/rust/src/: cabi.rs  lib.rs
examples/hash/: build.gradle.kts
examples/mathops/: build.gradle.kts
examples/mathops/native/cpp/: CMakeLists.txt
examples/mathops/native/cpp/src/: cabi.cpp
examples/mathops/native/rust/: Cargo.toml
examples/mathops/native/rust/src/: cabi.rs  lib.rs
fnv-plugin/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
native/cpp/: CMakeLists.txt  build.gradle.kts
native/cpp/include/: engine.hpp  fnv.hpp
native/cpp/src/: cabi.cpp  engine.cpp  jni_buffer.cpp  jni_checksum.cpp  jni_engine.cpp  jni_hashengine.cpp  jni_hasher.cpp  jni_scalar.cpp
native/rust/: Cargo.toml  build.gradle.kts  build.rs
native/rust/src/: buffer.rs  cabi.rs  checksum.rs  engine.rs  engine_jni.rs  fnv.rs  hasher_jni.rs  jni_hashengine.rs  lib.rs  scalar.rs
nativegen-runtime/: build.gradle.kts
nativegen-runtime/src/main/java/dev/sweety/: NativeLib.java
nativegen-runtime/src/main/kotlin/dev/sweety/: Backend.kt  Binding.kt
nativegen-spi/: build.gradle.kts
natives/: CMakeLists.txt
natives/src/: dev_sweety_NativeApi.h  engine.cpp  engine.h  jni.cpp
processor/: build.gradle.kts
src/jmh/java/dev/sweety/bench/: ArrayAccessBench.java  BatchBench.java  CrossingBench.java  EngineState.java  ThroughputBench.java
src/main/java/dev/sweety/: Binding.java  Buffer.java  Checksum.java  Engine.java  EngineFactory.java  HashEngine.java  HashSession.java  Hasher.java  Main.java  NativeApi.java  NativeBuffer.java  NativeLib.java  Scalar.java
src/main/java/dev/sweety/ffm/: FfmHashEngine.java
src/main/java/dev/sweety/jni/: CppNatives.java  FnvNative.java  JniHashEngine.java  RawNatives.java  RustNatives.java
src/main/java/dev/sweety/mem/: NativeArena.java  SegmentPool.java
src/main/kotlin/dev/sweety/: Backend.kt  Calculator.kt  Digest.kt  HashEngine.kt
src/test/java/dev/sweety/: ParityTest.java
(+40 files in other folders)
